fixes y firebase hosting

--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="description" content="Mi página web personal donde podrás entrar mi portafolio y contacto.">
+    <meta name="keywords" content="CV, curriculum, hoja de vida, desarrollador, frontend, backend, programador, administrador">
+    <meta name="author" content="Werner">
+    <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pagina-cv</title>
+
+    <meta property="og:title" content="Portafolio Werner - Programador">
+    <meta property="og:description" content="Mi perfil profesional y trabajos.">
+    <meta property="og:image" content="https://tupagina.com/imagen-perfil-og.jpg">
+    <meta property="og:url" content="https://tupagina.com/">
+    <meta property="og:type" content="website">
+
+
+    <title>Werner-portafolio</title>
   </head>
   <body>
     <div id="root"></div>
