arreglos css y meta

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta property="og:title" content="Portafolio Werner - Programador">
     <meta property="og:description" content="Mi perfil profesional y trabajos.">
-    <meta property="og:image" content="https://personalweb-werner.web.app/dist/webicon.webp">
+    <meta property="og:image" content="https://personalweb-werner.web.app/webicon.webp">
     <meta property="og:url" content="https://personalweb-werner.web.app/">
     <meta property="og:type" content="website">
 
